src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBGetProgramBinary_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBGetProgramBinary_StringErrorContext.class */
public final class ARBGetProgramBinary_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglGetProgramBinary(IIJJJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBGetProgramBinaryErrorContext");
        methods.put("glGetProgramBinary(ILjava/nio/IntBuffer;Ljava/nio/IntBuffer;Ljava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBGetProgramBinaryErrorContext");
        methods.put("nglProgramBinary(IIJI)V", "net/labymod/core/laby3d/opengl/error/generated/ARBGetProgramBinaryErrorContext");
        methods.put("glProgramBinary(IILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBGetProgramBinaryErrorContext");
        methods.put("glProgramParameteri(III)V", "net/labymod/core/laby3d/opengl/error/generated/ARBGetProgramBinaryErrorContext");
        methods.put("glGetProgramBinary(I[I[ILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBGetProgramBinaryErrorContext");
        return methods;
    }
}
